# waymo-sim

./: .gitignore  Dockerfile  context.md  progress.md  pyproject.toml  requirements.txt  run_demo.py
.github/workflows/: ci.yml
agent/: __init__.py  env.py
engine/: __init__.py  entity.py  kinematics.py  world.py
scenarios/: __init__.py  loader.py
scenarios/maps/: intersection.yaml  jaywalker.yaml  lane_change.yaml  pedestrian_crossing.yaml  straight_road.yaml
tests/: test_engine.py  test_env.py  test_scenarios.py
viewer/: __init__.py  renderer.py
